# StudentManagementSystem

./: CMakeLists.txt  StudentManagementSystem.h  admin.c  file.c  login.c  main.c  student.c  student_management_system.h  teacher.c  学生信息表.md
